Palette Prod Operations 🖼️

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Standalone Operations
+name: Palette Prod Operations 🖼️
 
 #Crear una action inicializadora para los pasos de git que solo se ejecutarán la primera vez
 #como inicializar el git y crear el venv.
